@@ -1,4 +1,4 @@
-AC_INIT([mk5daemon], [2.4.0], [Walter Brisken <wbrisken@nrao.edu>])
+AC_INIT([mk5daemon], [2.5.0], [Walter Brisken <wbrisken@nrao.edu>])
 AM_CONFIG_HEADER([config.h])
 
 AC_C_BIGENDIAN
@@ -54,7 +54,7 @@ echo "LIBS=${LIBS}"
 
 AC_OUTPUT([ \
 	Makefile \
-	mk5daemon.spec \
+	vlbi-mk5daemon.spec \
 	src/Makefile \
 	utils/Makefile \
 	mk5dir/Makefile
